--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 
     "target": "ES2020",
     "module": "ES2020",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
 
     "lib": ["DOM", "ES2020"],
 
